[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/MatchupPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/title_screen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.662745, 0.490196, 0.870588, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -190.0
margin_right = 203.0
margin_bottom = 273.0

[node name="Título" type="Label" parent="VBoxContainer"]
margin_right = 404.0
margin_bottom = 72.0
size_flags_vertical = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "Memory Cats"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 404.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 60 )

[node name="Jogar" type="Button" parent="VBoxContainer"]
margin_left = 2.0
margin_top = 140.0
margin_right = 402.0
margin_bottom = 240.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Jogar!"

[node name="Instruções" type="Button" parent="VBoxContainer"]
margin_left = 2.0
margin_top = 303.0
margin_right = 402.0
margin_bottom = 403.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Instruções"

[node name="Sair" type="Button" parent="VBoxContainer"]
visible = false
margin_left = 138.0
margin_top = 247.0
margin_right = 263.0
margin_bottom = 297.0
rect_min_size = Vector2( 125, 50 )
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/Instruções" to="." method="_on_Instrucoes_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
